--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body {
 }
 
 /*Animations*/
-@keyframes fading {
+@keyframes flashing {
     0%   {opacity: 1;}
     25%  {opacity: 0.6;}
     50%  {opacity: 0.2;}
@@ -94,7 +94,7 @@ body {
   }
 
   .fade-in {
-    animation-name: fade-in;
+    animation-name: flashing;
     animation-duration: 1s;
     animation-timing-function: linear;
     animation-iteration-count: 1;
