--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
-body {
-    margin: 2% 10% 5% 10%;
+/*body {
+  margin: 2% 10% 5% 10%;
+}*/
+
+main {
+  margin: 2% 10% 5% 10%;
 }
 
 /*Containers*/
